tests/paczka1/fuzzy1/75127679.err
Error in line 10: l7facu6Pdi A806 79,2
Error in line 12: l7facu6Pdi S64 70,9
Error in line 16: l7facu6Pdi A643 27,1
Error in line 20: A953 S64 19,2
Error in line 27: l7facu6Pdi A806 6M,0
Error in line 26: gAhfViki S64 36,2
Error in line 33: gAhfViki A806 11,4
Error in line 40: 6WTwc A643 -1,5
